# legal

./: # Project Overview: Autonomous Construct.md  .dockerignore  .env.example  .gitignore  API_DOCS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CUSTOMIZATION.md  DEPLOYMENT.md  Dockerfile  FINAL_CHECKLIST.md  FUTURE_ENHANCEMENTS.md  HANDOVER.md  LICENSE.md  MAINTENANCE.md  MONITORING.md  Makefile  PROJECT_PRESENTATION.md  QUICK_REFERENCE.md  README.md  SYSTEM_PERFORMANCE_BENCHMARK.md  TEST_ATTESTATION.md  TROUBLESHOOTING.md  UI_DESIGN_SPECIFICATION.md  alembic.ini  docker-compose.override.yml.template  docker-compose.yml  generate_migration.py  main.py  pyproject.toml  requirements.txt  security_review.md  setup.py  test_sources.py
config/: city_portals.json  classification_config_example.json  construction_entities.json  enrichment_api_credentials_example.json  hubspot_config.json  keywords.json  legal_api_credentials_example.json  legal_patterns.json  legal_validation_rules.json  news_sources.json  rss_sources.json  sources.json  sources_example.json  target_locations.json  target_locations_socal.json
docs/: Client_QA_System_Overview.md  SOCAL_LEAD_SOURCES.md  classification.md  enrichment_testing.md  lead_enrichment.md  legal_api_integration.md
integrations/: hubspot_client.py
migrations/: env.py
models/: lead.py
scrapers/: base_scraper.py  city_portal_scraper.py  news_scraper.py  rss_scraper.py
scripts/: entrypoint.sh  generate_sample_leads.py  healthcheck.sh  lead_dashboard.py  run_scraper.py  test_live_scraping.py  test_scrape_leads.py  verify_legal_api_access.py  view_leads.py
(+91 files in other folders)
